syntax = "proto3";

option csharp_namespace = "Presentation.Proto";

package NoteTree;

service NoteTree {
  rpc GetNotes(GetNotesRequest) returns (GetNotesResponse);
  rpc SetNotes(SetNotesRequest) returns (SetNotesResponse);
}

message Note {
  string content = 1;
  repeated Note children = 2;
}

// get notes
message GetNotesRequest {
  string jwt = 1;
}

message GetNotesResponse {
  repeated Note notes = 1;
}

// set notes
message SetNotesRequest {
  string jwt = 1;
  repeated Note notes = 2;
}

message SetNotesResponse {
}
